syntax = "proto3";

//protoc -Igreet/proto --go_out=. --go_opt=module=github.com/sayeed1999/grpc-go-course --go-grpc_out=. --go-grpc_opt=module=github.com/sayeed1999/grpc-go-course greet/proto/greet.proto

package greet;

option go_package = "github.com/sayeed1999/grpc-go-course/greet/proto";

message GreetRequest {
    string first_name = 1;
}

message GreetResponse {
    string result = 1;
}

service GreetService {
    rpc Greet (GreetRequest) returns (GreetResponse);
    rpc GreetWithDeadlines (GreetRequest) returns (GreetResponse);
}